<resources>
    <string name="languague_code">en</string>
    <string name="app_name">TravelShare</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_google">Sign in with Google</string>
    <string name="logout">Log out</string>
    <string name="guest">Continue as guest</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">TravelShare</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_new">New Itinenary</string>
    <string name="menu_saved">Saved Itineraries</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="save_location_success">Saved location!</string>
    <string name="other_saved">Other itineraries</string>
    <string name="my_saved">My itineraries</string>
    <string name="places">Interesting Places</string>
    <string name="stay">Stays</string>
    <string name="food">Food Places</string>
    <string name="title_activity_guest_main">GuestMainActivity</string>
    <string name="search">Search</string>
    <string name="title_activity_itinerary">Itinerary</string>
    <string name="saved_itinerary">Saved itinerary!</string>
    <string name="maps">Click on the address to open it in Google Maps.</string>
    <string name="title_activity_images">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_add_new_place">AddNewPlaceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_new_stay">AddNewStayActivity</string>
    <!-- Strings related to new itinerary -->
    <string name="new_itinerary">New itinerary</string>
    <string name="new_place">New place of interest</string>
    <string name="new_food">New food place</string>
    <string name="new_stay">New stay</string>
    <string name="price_night">Price / Night:</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="topic">Topic:</string>
    <string name="add_place_of_interest">Add place of interest</string>
    <string name="add_stay">Add stay</string>
    <string name="add_food">Add food</string>
    <string name="save">Save</string>
    <string name="post">Post</string>
    <string name="share_with_friend">Share with friends</string>
    <string name="info_extra">Additional information:</string>
    <string name="price_nigth">Price /Nigth:</string>
    <string name="average_price">Average price:</string>
    <string name="images">Images:</string>
    <string name="type">Type:</string>
    <string name="category">Category:</string>
    <string name="comments">Comments:</string>
    <string name="fields_itinerary_required_message">Please fill in all the required fields</string>
    <string name="content_itinerary_necessary_message">Please add a place of interest, stay or food.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="place_added">The place of interest has been added to the itinerary</string>
    <string name="food_added">Food venue added to itinerary</string>
    <string name="stay_added">The stay has been added to the itinerary</string>
    <string name="do_you_want_add_more_places">Do you want to add more places of interest?</string>
    <string name="do_you_want_add_more_stay">Do you want to add more rooms?</string>
    <string name="do_you_want_add_more_food">Do you want to add more food places?</string>
    <string name="itinerary_added">Successfully created itinerary</string>
    <string name="itinerary_add_error">An error has occurred. The itinerary could not be created</string>
</resources>