<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.travelshare.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.travelshare.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_itinerary"
        android:name="com.example.travelshare.ui.shares_with_me.SharesWithMeFragment"
        android:label="@string/menu_new"
        tools:layout="@layout/fragment_share_with_me" />
    <fragment
        android:id="@+id/nav_saved"
        android:name="com.example.travelshare.ui.saved.SavedFragment"
        android:label="@string/menu_saved"
        tools:layout="@layout/fragment_saved" />
</navigation>