<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/viajero"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/guide"
            android:title="@string/menu_saved" />
        <item
            android:id="@+id/nav_itinerary"
            android:icon="@mipmap/share"
            android:title="@string/share" />
    </group>
</menu>