<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/comer"
    android:backgroundTint="@color/beige_icons"
    android:padding="10dp"
    android:paddingStart="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".ui.new_itinerary.AddFoodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/new_food"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/nameFoodTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <EditText
            android:id="@+id/txtFoodLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/typeFoodSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/categoryFoodSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/averagePriceFoodTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/average_price" />

        <EditText
            android:id="@+id/averagePriceFoodtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_extra" />

        <EditText
            android:id="@+id/infoExtraFoodTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:text="@string/images" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddImageFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_horizontal"
            android:clickable="true"
            app:backgroundTint="@color/water_green"
            app:srcCompat="@drawable/photo_add_roundedblack_512" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewFood"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btnSaveFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTint="#FFFFFF"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>